# nrdtech-python-aws-lambda

./: .coverage  .env.global  .env.terraform  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  _run_terraform.sh  _run_terraform_apply_plan.sh  _run_terraform_create.sh  _run_terraform_destroy.sh  _run_terraform_plan.sh  bitbucket-pipelines.yml  config.global  config.prod  config.staging  create-release.ps1  create-release.sh  deploy.sh  pyproject.toml  sample.env  setup.py
.github/workflows/: github_flow.yml  github_flow.yml.disabled  main.yml  nrdtech_legacy.yml_disabled
app/: lambda_handler.py  lambda_handler_api_gateway.py.disabled  lambda_handler_eventbridge.py.disabled  lambda_handler_sqs.disabled  logging_setup.py
setup_lib/: __init__.py  apply_templates.py  aws_creds.py  aws_discovery.py  cli.py  config_io.py  constants.py  github_gating.py  prompts.py
src/app/: lambda_handler.py
terraform/bootstrap/: main.tf
terraform/main/: cloudwatch_alarm.tf  ecr.tf  lambda.tf  lambda_api_gateway.tf  lambda_eventbridge_schedule.tf  lambda_sqs_trigger.tf  main.tf  tags.tf  variables.tf
tests/unit/: test_setup_project.py
tests/unit/app/: lambda_handler_test.py  lambda_handler_test_api_gateway.py.disabled  lambda_handler_test_eventbridge.py.disabled  lambda_handler_test_sqs.py.disabled  test_logging_setup.py
