[tool.poetry]
name = "nrdtech-python-aws-lambda"
version = "0.1.0"
description = ""
authors = ["Nic Delorme <nic.delorme@nrdtech.io>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
boto3 = "^1.43.45"
fastapi = "^0.139.0"
uvicorn = "^0.51.0"
mangum = "^0.21.0"
python-dotenv = "^1.2.2"
pydantic = "^2.13.4"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py", "*_test.py", "*_test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
